* Add Schedule
* Fix an error when the isolate was not created in the main thread
* Add TimeFormat, TimePeriod and SymbolParser
* Add GetSymbols and SetSymbols for DXFeedSubscription

## Version 1.2.1

* Improve TimeSeriesEventAsync public API

## Version 1.2.0

* Add TimeSeriesEventAsync

## Version 1.1.0

* Add qds-tools
* Add force-stream options for tools
* Fix sample for dxLink in Readme

## Version 1.0.0

* Reduce memory consumption
* Improve performance
* Fix token-based authorization in dxLink
* Bump DxFeed.Graal.Native.SDK

## Version 0.8.0

* Update README.MD
* Add dependencies and third party license
* Fix DocFX template

## Version 0.7.0

* Change lifetime management for objects created by GraalVM
* Add builds for net7.0 and net8.0

## Version 0.6.0

* Bump DxFeed.Graal.Native.SDK
* Add IpfConnection

## Version 0.5.0

* Add InstrumentProfileReader

## Version 0.4.0

* Fix: Readme and docs

## Version 0.3.0

* Feature: Add Help Tool
* Feature: Add Help articles
* Feature: Add LatencyTest tool
* Fix: CandleSymbol
* Feature: Add Candle Sample
* Fix: Update readme

## Version 0.2.1

* Feature: Add CodeQL analysis CI/CD step
* Feature: Add DocFX generation
* Fix: Update readme
* Feature: Add docs (available at https://dxfeed.github.io/dxfeed-graal-net-api/)

## Version 0.2.0

* Feature: Bump DxFeed.Graal.Native version to 0.3.3
* Feature: Bump QD version to 3.316
* Refactor: Rework event mappers (now we can convert to/from native)
* Feature: Add DXPublisher (now we can publish events)
* Feature: Add WriteTapFile sample
* Feature: Add option tape to DxFeed.Graal.Net.Tools (now we can tape events to file)
* Feature: Add OptionSale market event
* Fix: AnalyticOrder market event parsing
* Feature: Add new field to Profile market event
* Fix: Isolate and IsolateThread now correct attach/detach
* Feature: Add ThreadExitManager for manage IsolateThread
* Feature: Add PlatformUtil to identify the current platform